@@ -373,7 +373,7 @@ public final class BisqEasyOpenTradesController extends ChatController<BisqEasyO
     private void maybeSelectFirst() {
         if (!hasTradeForChannel(selectionService.getSelectedChannel().get()) &&
                 !model.getSortedList().isEmpty()) {
-            UIThread.runOnNextRenderFrame(() -> selectionService.selectChannel(model.getSortedList().getFirst().getChannel()));
+            UIThread.runOnNextRenderFrame(() -> selectionService.selectChannel(model.getSortedList().get(0).getChannel()));
         }
     }
 
